--- a/message_board/models/templates/message_create.html
+++ b/message_board/models/templates/message_create.html
@@ -9,8 +9,10 @@
     {{ form.media }}
 
     {{ form.as_p }}
+    
     <input type="submit" value="Save" />
 </form>
-
+<br />
+    <p>Чтобы вставить iframe, нажмите source</p>
 
 {% endblock content %}
