--- a/message_board/models/templates/message_detail.html
+++ b/message_board/models/templates/message_detail.html
@@ -6,9 +6,13 @@
 {% url "message_delete" message.id as delete_url%} 
 
 <a align='right' href='{% url "message_list" %}'>Назад</a>
+
+{% if request.user.is_authenticated %}
 <a align='right' href='{{edit_url}}'>Редактировать</a>
 <a align='right' href='{{delete_url}}'>Удалить</a>
-
-
+{% endif %}
+<h1>User:{{message.author}}</h1>
+{{message.header}}
+<br />
 {{message.content|safe}}
 {% endblock content %}
