--- a/message_board/models/templates/message_create.html
+++ b/message_board/models/templates/message_create.html
@@ -1,6 +1,7 @@
 {% extends "main/index.html" %}
 
 {% block content %}
+<a align='right' href='{% url "message_list" %}'>Назад</a>
 <h1>Объявление</h1>
 <hr>
 <form action="" method="post">
